wacc/test/golden/syntaxErr.if.ifNoelse
# if missing else clause

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  if true 
  then
    skip
  fi
end


(line 15, column 3):
  unexpected "fi"
  expected ";", else, or end of skip
  >    skip
  >  fi
     ^^
  >end